--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ Django==3.1.1
 django-ckeditor==6.0.0
 django-cors-headers==3.5.0
 django-js-asset==1.2.2
+Pillow==7.2.0
 pytz==2020.1
 sqlparse==0.3.1
